menu.shop add icons & add menu.explore to config

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,3 +1,7 @@
 {{ define "main" }}
-Hello
+<section class="main-content">
+    <div class="container">
+        <h1>{{ .Title }}</h1>
+    </div>
+</section>
 {{ end }}
