--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -10,62 +10,7 @@
             </div>
             <nav class="nav-wrapper">
                 {{ partial "main-nav.html" . }}
-                <div data-w-id="6714678d-cb9c-b655-5209-6473232315b8" class="nav-items mobile">
-                    <a href="#" class="nav-link w-inline-block">
-                        <div class="nav-link-text">Home</div>
-                    </a>
-                    <div class="nav-link dropdown-trigger">
-                        <div class="nav-link">
-                            <div class="nav-link-text">Shop Insurance &nbsp;</div>
-                            <div class="nav-link-text">--</div>
-                        </div>
-                        <div class="dropdown" style="display: none;">
-                            <a href="#" class="nav-link w-inline-block">
-                                <div class="nav-link-text">Life</div>
-                            </a>
-                            <a href="#" class="nav-link w-inline-block">
-                                <div class="nav-link-text">Health</div>
-                            </a>
-                            <a href="#" class="nav-link w-inline-block">
-                                <div class="nav-link-text">Dental</div>
-                            </a>
-                            <a href="#" class="nav-link emphasis w-inline-block">
-                                <div class="nav-link-text">View All</div>
-                            </a>
-                        </div>
-                    </div>
-                    <a href="#" class="nav-link w-inline-block">
-                        <div class="nav-link-text">Blog</div>
-                    </a>
-                    <div class="nav-link dropdown-trigger">
-                        <div class="nav-link">
-                            <div class="nav-link-text">Explore&nbsp;&nbsp;</div>
-                            <div class="nav-link-text">--</div>
-                        </div>
-                        <div class="dropdown" style="display: none;">
-                            <a href="#" class="nav-link w-inline-block">
-                                <div class="nav-link-text">About Us</div>
-                            </a>
-                            <a href="#" class="nav-link w-inline-block">
-                                <div class="nav-link-text">FAQ</div>
-                            </a>
-                            <a href="#" class="nav-link w-inline-block">
-                                <div class="nav-link-text">Contact</div>
-                            </a>
-                        </div>
-                    </div>
-                    <div class="social-icons mobile">
-                        <a href="#" class="social-link w-inline-block">
-                            <div></div>
-                        </a>
-                        <a href="#" class="social-link w-inline-block">
-                            <div></div>
-                        </a>
-                        <a href="#" class="social-link w-inline-block">
-                            <div></div>
-                        </a>
-                    </div>
-                </div>
+                {{ partial "mobile-nav.html" . }}
                 <a href="tel:2106990281" class="nav-link phone w-inline-block">
                     <div class="text-block-2"></div>
                     <div class="text-block-3">&nbsp;&nbsp;210-699-0281</div>
