--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "title"}}Title{{ end }}
 
 {{ define "main" }}
-<h1> test </h1>
+<section class="main-content">
+    <h1>{{ .Title }}</h1>
+</section>
 {{ end }}
