--- a/layouts/products/single.html
+++ b/layouts/products/single.html
@@ -31,10 +31,10 @@
                             </div>
                         </form>
                 </div>
+                <div class="quote-box-disclaimer">Insurance quoting provided by SafeCo</div>
                 {{ end }}
             {{ end }}
             {{ end }}
-            <div class="quote-box-disclaimer">Insurance quoting provided by SafeCo</div>
         </div>
     </div>
     <div class="div-block-16"></div>
@@ -49,7 +49,10 @@
                         <div data-w-id="ad87ec45-3c28-7fd1-0a5c-f4a1d4bfc8f2" class="chevron-down">  </div>
                         <div data-w-id="dd30f1a3-1441-7a02-d9df-c0a920e6b2b8" class="chevron-left">  </div>
                     </div>
-                    <div data-w-id="ad6c370b-e4af-00f1-d09f-50460c02b5ef" class="div-block-18">
+                    {{ .Parent }}
+                    {{ range where .Site.Pages "Section" "products" }}
+                    {{ .Title }}
+                    <!--<div data-w-id="ad6c370b-e4af-00f1-d09f-50460c02b5ef" class="div-block-18">
                         <a href="/auto" class="sidebar-heading w-inline-block">
                             <div class="text-block-17">Personal Auto &amp; Vehicle</div>
                             <div class="text-block-11">  </div>
@@ -68,7 +71,8 @@
                                 <div>RV Insurance</div>
                             </a>
                         </div>
-                    </div>
+                    </div>-->
+                    {{ end }}
                     <div class="div-block-18">
                         <a class="sidebar-heading w-inline-block">
                             <div class="text-block-17">Life</div>
@@ -136,20 +140,14 @@
                 </div>
             </aside>
             <main class="flex-grow product">
+                {{ if .Params.mikes_take }}
                 <div class="div-block-19 w-clearfix">
                     <h1 class="mikes-take">Mike&#x27;s Take</h1>
                     <div class="take-title">Founder &amp; CEO</div>
                     <div class="div-block-20"></div>
-                    <p class="take-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.
-                        Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat.
-                        Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique
-                        posuere. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros
-                        elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam
-                        libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae
-                        risus tristique posuere.
-                        <br/>
-                    </p>
+                    {{ .Params.mikes_take }}
                 </div>
+                {{ end }}
                 <div>
                     <div data-duration-in="300" data-duration-out="100" class="w-tabs">
                         <div class="tabs-menu w-tab-menu">
