--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -10,13 +10,13 @@
                 <div class="slogan">Don't just get insurance. Get InsuranceSmart</div>
                 <div class="social-icons footer">
                     <a href="#" class="social-link footer w-inline-block">
-                        <div></div>
+                        <i class="fab fa-facebook"></i>
                     </a>
                     <a href="#" class="social-link footer w-inline-block">
-                        <div></div>
+                        <i class="fab fa-twitter"></i>
                     </a>
                     <a href="#" class="social-link footer w-inline-block">
-                        <div></div>
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
             </div>
