--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -33,14 +33,22 @@
         <div class="div-block-45">
           <p>Share This:</p>
           <a href="#" class="share-button w-inline-block">
-            <div>
-              <br/>
-            </div>
+            <i class="fab fa-facebook"></i>
           </a>
           <a href="#" class="share-button w-inline-block">
-            <div>
-              <br/>
-            </div>
+            <i class="fab fa-twitter"></i>
+          </a>          
+          <a href="#" class="share-button w-inline-block">
+            <i class="fab fa-linkedin"></i>
+          </a>
+          <a href="#" class="share-button w-inline-block">
+            <i class="fab fa-reddit"></i>
+          </a>
+          <a href="#" class="share-button w-inline-block">
+            <i class="fab fa-tumblr"></i>
+          </a>
+          <a href="#" class="share-button w-inline-block">
+            <i class="fab fa-google-plus"></i>
           </a>
         </div>
         <div class="div-block-45">
@@ -190,10 +198,10 @@
             </div>
           </div>
           <div class="related-arrow-left w-slider-arrow-left">
-            <div class="w-icon-slider-left"></div>
+            <div class="w-icon-slider-left"><i class="fas fa-chevron-left"></i></div>
           </div>
           <div class="related-arrow-right w-slider-arrow-right">
-            <div class="w-icon-slider-right"></div>
+            <div class="w-icon-slider-right"><i class="fas fa-chevron-right"></i></div>
           </div>
           <div class="slide-nav-2 w-slider-nav w-round"></div>
         </div>
