--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -12,23 +12,23 @@
                 {{ partial "main-nav.html" . }}
                 {{ partial "mobile-nav.html" . }}
                 <a href="tel:2106990281" class="nav-link phone w-inline-block">
-                    <div class="text-block-2"></div>
+                    <div class="text-block-2"><i class="fas fa-phone"></i></div>
                     <div class="text-block-3">&nbsp;&nbsp;210-699-0281</div>
                     <div class="text-block-4">&nbsp;&nbsp;call us</div>
                 </a>
                 <div class="social-icons">
                     <a href="#" class="social-link w-inline-block">
-                        <div></div>
+                        <i class="fab fa-facebook"></i>
                     </a>
                     <a href="#" class="social-link w-inline-block">
-                        <div></div>
+                        <i class="fab fa-twitter"></i>
                     </a>
                     <a href="#" class="social-link w-inline-block">
-                        <div></div>
+                        <i class="fab fa-instagram"></i>
                     </a>
                 </div>
                 <a href="#" data-w-id="6714678d-cb9c-b655-5209-6473232315fb" class="link-block-2 w-inline-block">
-                    <div></div>
+                    <i class="fas fa-bars"></i>
                 </a>
             </nav>
         </div>
