--- a/static/css/insurancesmart.css
+++ b/static/css/insurancesmart.css
@@ -379,34 +379,9 @@ img {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background-image: url('../images/texas-alamo.adapt.945.1.jpg');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
-}
-
-.banner-photo._1 {
-  background-image: url('../images/eye-for-ebony-340137-unsplash.jpg');
-}
-
-.banner-photo._2 {
-  background-image: url('../images/joshua-rodriguez-583392-unsplash.jpg');
-}
-
-.banner-photo._3 {
-  background-image: url('../images/pregnant-couple.jpg');
-}
-
-.banner-photo._4 {
-  background-image: url('../images/texas-alamo.adapt.945.1.jpg');
-}
-
-.banner-photo._5 {
-  background-image: url('../images/5a8b0feab39fc100011f1e5e_photo-1513337915236-364fe3ee1f53-compressor.jpg');
-}
-
-.banner-photo._6 {
-  background-image: url('../images/woman-hiking-compressor.jpg');
 }
 
 .div-block {
@@ -488,7 +463,6 @@ img {
   display: none;
   width: 300px;
   height: 400px;
-  background-image: url('../images/joshua-rodriguez-583392-unsplash.jpg');
   background-position: 60% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -497,13 +471,11 @@ img {
 .photo._2 {
   right: 343px;
   bottom: 50px;
-  background-image: url('../images/eye-for-ebony-340137-unsplash.jpg');
 }
 
 .photo._3 {
   bottom: -209px;
   height: 300px;
-  background-image: url('../images/pregnant-couple.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
@@ -516,7 +488,6 @@ img {
 .photo._3-copy {
   bottom: -209px;
   height: 350px;
-  background-image: url('../images/pregnant-couple.jpg');
   background-position: 50% 50%;
   background-repeat: no-repeat;
 }
@@ -703,7 +674,6 @@ img {
   height: 75px;
   margin-right: 15px;
   float: left;
-  background-image: url('../images/couple-smiling.jpg');
   background-position: 50% 50%;
   background-size: cover;
 }
@@ -841,8 +811,6 @@ img {
   position: relative;
   width: 100%;
   padding-top: 50%;
-  background-image: -webkit-linear-gradient(270deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../images/texas-alamo.adapt.945.1.jpg');
-  background-image: linear-gradient(180deg, rgba(0, 0, 0, .5), rgba(0, 0, 0, .5)), url('../images/texas-alamo.adapt.945.1.jpg');
   background-position: 0px 0px, 50% 50%;
   background-size: auto, cover;
   color: #fff;
@@ -874,7 +842,6 @@ img {
   -webkit-align-items: center;
   -ms-flex-align: center;
   align-items: center;
-  font-family: 'Fa 400', sans-serif;
   line-height: 16px;
 }
 
@@ -1212,7 +1179,6 @@ address {
   height: 80px;
   margin-right: 10px;
   float: left;
-  background-image: url('../images/example-bg.png');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1437,7 +1403,7 @@ address {
 .page-banner-copy2-copy {
   position: relative;
   padding-top: 200px;
-  background-image: url('../images/jon-flobrant-230583-unsplash-1.jpg');
+  /* background-image: url('../images/jon-flobrant-230583-unsplash-1.jpg'); */
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1456,7 +1422,6 @@ address {
   position: relative;
   min-height: 500px;
   background-color: #fff;
-  background-image: url('../images/jon-flobrant-230583-unsplash-1.jpg');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1597,7 +1562,6 @@ address {
   height: 100px;
   margin-right: 10px;
   float: left;
-  background-image: url('../images/49545_kill_la_kill.jpg');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1649,7 +1613,6 @@ address {
 .sreading-photo {
   min-height: 100px;
   min-width: 100px;
-  background-image: url('../images/example-bg.png');
   background-position: 50% 50%;
   background-size: cover;
 }
@@ -1768,21 +1731,10 @@ address {
   -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
-  background-image: url('../images/jon-flobrant-230583-unsplash-1.jpg');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-}
-
-.product-category-link.home {
-  background-image: url('../images/1929176-1.jpg');
-  background-size: cover;
-}
-
-.product-category-link.life {
-  background-image: url('../images/5a8b0feab39fc100011f1e5e_photo-1513337915236-364fe3ee1f53-compressor.jpg');
-  background-size: cover;
 }
 
 .image-overlay {
@@ -1841,7 +1793,6 @@ address {
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
-  background-image: url('../images/example-bg.png');
   background-position: 50% 50%;
   background-size: cover;
   box-shadow: none;
@@ -1876,7 +1827,6 @@ address {
   margin-right: 10px;
   float: left;
   border-radius: 100px;
-  background-image: url('../images/49545_kill_la_kill.jpg');
   background-position: 50% 50%;
   background-size: cover;
 }
@@ -1920,7 +1870,6 @@ address {
   -webkit-align-items: flex-end;
   -ms-flex-align: end;
   align-items: flex-end;
-  background-image: url('../images/example-bg.png');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -1969,7 +1918,6 @@ address {
   margin-right: 10px;
   float: left;
   border-radius: 100px;
-  background-image: url('../images/49545_kill_la_kill.jpg');
   background-position: 50% 50%;
   background-size: cover;
 }
@@ -2006,8 +1954,6 @@ address {
   display: none;
   padding-top: 200px;
   padding-bottom: 100px;
-  background-image: -webkit-linear-gradient(90deg, hsla(0, 0%, 100%, .28), hsla(0, 0%, 100%, .85)), url('../images/eye-for-ebony-340137-unsplash.jpg');
-  background-image: linear-gradient(0deg, hsla(0, 0%, 100%, .28), hsla(0, 0%, 100%, .85)), url('../images/eye-for-ebony-340137-unsplash.jpg');
   background-position: 0px 0px, 50% 50%;
   background-size: auto, cover;
   background-repeat: repeat, no-repeat;
@@ -2183,7 +2129,6 @@ address {
 .blog-card-image {
   position: relative;
   min-height: 150px;
-  background-image: url('../images/joshua-rodriguez-583392-unsplash.jpg');
   background-position: 50% 50%;
   background-size: cover;
   background-repeat: no-repeat;
@@ -2647,7 +2592,6 @@ address {
   }
   .misc-page-banner {
     padding-top: 250px;
-    background-image: url('../images/couple-smiling.jpg');
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2679,7 +2623,6 @@ address {
   }
   .page-banner-copy2 {
     padding-top: 250px;
-    background-image: url('../images/jon-flobrant-230583-unsplash-1.jpg');
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2694,7 +2637,6 @@ address {
   }
   .page-banner-copy2-copy {
     padding-top: 150px;
-    background-image: url('../images/jon-flobrant-230583-unsplash-1.jpg');
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2702,7 +2644,6 @@ address {
   }
   .blog-banner {
     padding-top: 250px;
-    background-image: url('../images/jon-flobrant-230583-unsplash-1.jpg');
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -2795,7 +2736,6 @@ address {
   }
   .page-banner-copy2-copyb {
     padding-top: 250px;
-    background-image: url('../images/jon-flobrant-230583-unsplash-1.jpg');
     background-position: 50% 50%;
     background-size: cover;
     background-repeat: no-repeat;
@@ -3325,7 +3265,7 @@ address {
   }
 }
 
-@font-face {
+/*@font-face {
   font-family: 'Fa 400';
   src: url('../fonts/fa-regular-400.woff2') format('woff2'), url('../fonts/fa-regular-400.eot') format('embedded-opentype'), url('../fonts/fa-regular-400.woff') format('woff');
   font-weight: 400;
@@ -3342,4 +3282,4 @@ address {
   src: url('../fonts/fa-brands-400.woff2') format('woff2'), url('../fonts/fa-brands-400.eot') format('embedded-opentype'), url('../fonts/fa-brands-400.woff') format('woff');
   font-weight: 400;
   font-style: normal;
-}
+}*/
