fix chevron and text spacing for FAQs

--- a/layouts/products/single.html
+++ b/layouts/products/single.html
@@ -177,7 +177,7 @@
                                     <div class="faq-header">
                                         <div class="chevron-left"><i class="fas fa-chevron-right"></i></div>
                                         <div class="chevron-down"><i class="fas fa-chevron-down"></i> </div>
-                                        <h2 class="heading-11">&nbsp;&nbsp;{{ .question }}</h2>
+                                        <h2 class="heading-11">{{ .question }}</h2>
                                     </div>
                                     <div class="faq-answer">
                                         {{ .answer | markdownify }}
