product category pages add safeco form builder and other params

--- a/layouts/insurancecategories/single.html
+++ b/layouts/insurancecategories/single.html
@@ -1,11 +1,39 @@
 {{ define "main" }}
-<section class="page-banner-copy2">
+<section class="page-banner-copy2-copy" style="background-image: URL({{ .Site.Params.cloudinary_url }}w_1600,q_50{{ .Params.Featured_image }})">
+    <div class="div-block-16"></div>
     <div class="container flex-left">
         <div class="product-quote-box">
-            <h1 class="quote-box-heading">Auto &amp; Vehicle Insurance</h1>
-            <p class="quote-box-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim</p>
-            <div class="quote-box w-form">
-            <div class="quote-box-disclaimer">Insurance quoting provided by SafeCo</div>
+            <h1 class="quote-box-heading">{{ .Title }}</h1>
+            <p class="quote-box-text">{{ .Params.Subheading }}</p>
+            {{ if .Params.Quote }}
+                {{ range first 1 .Params.Quote }}
+                    {{ if eq .template "safeco-quote-form" }}
+                    {{ $d := .default }}
+                    <div class="w-embed w-script">
+                            <form name="gaqList" id="gaqList" onsubmit="return submitForm();">
+                                <div class="quote-form-wrap" onload="setProduct();">
+                                    <input id="zip" required="" type="text" name="zip" maxlength="5" placeholder="Enter Zip Code" class="zip-field w-input">
+                                    <select id="subMenu" required="" name="subMenu" class="insurance-select w-select">
+                                        {{ if $d }}{{ else }}<option id="defaultoption" value="">Select Insurance Type</option>{{ end }}
+                                        {{- range .options -}}
+                                            {{ $id := . | lower }}
+                                            {{ range $.Site.Data.quote_forms.safeco }}
+                                                {{ $l := .display | lower }}
+                                                {{ if eq $id $l }}
+                                                <option id="{{ .id }}" {{ if eq $d $l }}selected{{ end }} value="{{ .value }}" data-zip="zip">{{ .display }}</option>
+                                                {{ end }}
+                                            {{ end }}
+                                        {{ end }}
+                                    </select>
+                                    <input type="submit" value="Get a Quote" id="fakeBtn" class="get-a-quote w-button">
+                                    <input type="submit" value="Get a Quote" id="startBtn" onclick="submitForm();" class="get-a-quote w-button" style="display:none">
+                                </div>
+                            </form>
+                    </div>
+                    <div class="quote-box-disclaimer">Insurance quoting provided by SafeCo</div>
+                    {{ end }}
+                {{ end }}
+            {{ end }}
         </div>
     </div>
 </section>
@@ -78,4 +106,8 @@
         </div>
     </div>
 </section>
+{{ end }}
+
+{{ define "addscripts"}}
+    {{ partial "forms/safeco-scripts.html" . }}
 {{ end }}
