--- a/layouts/partials/product-menu.html
+++ b/layouts/partials/product-menu.html
@@ -12,16 +12,16 @@
             </div>
             {{ end }}
         {{ end }}
-        {{ range where .Site.RegularPages.ByTitle "Section" "insurancecategories"}}
+        {{ range sort (where .Site.RegularPages.ByTitle "Section" "insurancecategories") "Params.weight" }}
         {{ $f := .File.LogicalName }}
         <div data-w-id="ad6c370b-e4af-00f1-d09f-50460c02b5ef" class="div-block-18 {{ if eq $cat $f -}}active{{- end -}}">
             <a href="{{ .RelPermalink }}" class="sidebar-heading top w-inline-block">
                 <div class="text-block-17">{{ .Title }}</div>
-                <div class="text-block-11"><i style="margin-left: 10px" class="fas fa-car"></i> </div>
+                <div class="text-block-11"><i style="margin-left: 10px" class="fas fa-{{ .Params.fa_icon }}"></i> </div>
             </a>
             {{ if eq $cat $f }}
             <div class="product-content">
-                {{ range where $.Site.RegularPages.ByTitle "Section" "products" }}
+                {{ range where $.Site.RegularPages "Section" "products" }}
                     {{ if eq .Params.category $category }}
                     <a href="{{ .RelPermalink }}" class="sidebar-heading sublink w-inline-block">
                         <div>{{ if eq .RelPermalink $link }}<i style="color: #ffbc00" class="fas fa-chevron-right"></i>&nbsp;{{ end }}{{ .Title }}</div>
@@ -38,21 +38,21 @@
         {{ $cat := .File.LogicalName }}
         {{ $category := add "insurancecategories/" .File.LogicalName }}
         {{ range where .Site.RegularPages "Section" "insurancecategories" }}
-        {{ if eq .File.LogicalName $cat }}
-        <div class="sidebar-category">
-            <div class="text-block-17">Section: {{ .Title }}&nbsp;&nbsp;</div>
-            <div data-w-id="ad87ec45-3c28-7fd1-0a5c-f4a1d4bfc8f2" class="chevron-down"><i class="fas fa-chevron-down"></i></div>
-            <div data-w-id="dd30f1a3-1441-7a02-d9df-c0a920e6b2b8" class="chevron-left"><i class="fas fa-chevron-right"></i></div>
-        </div>
+            {{ if eq .File.LogicalName $cat }}
+            <div class="sidebar-category">
+                <div class="text-block-17">Section: {{ .Title }}&nbsp;&nbsp;</div>
+                <div data-w-id="ad87ec45-3c28-7fd1-0a5c-f4a1d4bfc8f2" class="chevron-down"><i class="fas fa-chevron-down"></i></div>
+                <div data-w-id="dd30f1a3-1441-7a02-d9df-c0a920e6b2b8" class="chevron-left"><i class="fas fa-chevron-right"></i></div>
+            </div>
+            {{ end }}
         {{ end }}
-    {{ end }}
-    {{ range where .Site.RegularPages.ByTitle "Section" "insurancecategories"}}
+    {{ range sort (where .Site.RegularPages.ByTitle "Section" "insurancecategories") "Params.weight" }}
     {{ $f := .File.LogicalName }}
     <div class="div-block-18 {{ if eq $cat $f -}}active{{- end -}}">
 
         <a href="{{ .RelPermalink }}" class="sidebar-heading top w-inline-block">
             <div class="text-block-17">{{ if eq .RelPermalink $link }}<i style="color: #ffbc00" class="fas fa-chevron-right"></i>&nbsp;{{ end }}{{ .Title }}</div>
-            <div class="text-block-11"><i style="margin-left: 10px" class="fas fa-car"></i> </div>
+            <div class="text-block-11"><i style="margin-left: 10px" class="fas fa-{{ .Params.fa_icon }}"></i> </div>
         </a>
         {{ if eq $cat $f }}
         <div class="product-content">
