other form options for product pages

--- a/layouts/products/single.html
+++ b/layouts/products/single.html
@@ -1,4 +1,5 @@
 {{ define "main"}}
+{{- $phone := $.Site.Data.general_settings.contact_info.phone -}}
 <section style="background-image:url({{ .Site.Params.cloudinary_url }}w_1600,q_80{{ .Params.Featured_Image }})"
     class="page-banner-copy2-copy">
     <div class="container">
@@ -6,33 +7,62 @@
             <h1 class="quote-box-heading">{{ .Title }}</h1>
             <p class="quote-box-text">{{ .Params.Description }}</p>
             {{ if .Params.quote }}
-            {{ range first 1 .Params.quote }}
-                {{ if eq .template "safeco-quote-form" }}
-                {{ $d := .default }}
-                <div class="w-embed w-script">
-                        <form name="gaqList" id="gaqList" onsubmit="return submitForm();">
-                            <div class="quote-form-wrap" onload="setProduct();">
-                                <input id="zip" required="" type="text" name="zip" maxlength="5" placeholder="Enter Zip Code" class="zip-field w-input">
-                                <select id="subMenu" required="" name="subMenu" class="insurance-select w-select">
-                                    {{ if $d }}{{ else }}<option id="defaultoption" value="">Select Insurance Type</option>{{ end }}
-                                    {{- range .options -}}
-                                        {{ $id := . | lower }}
-                                        {{ range $.Site.Data.quote_forms.safeco }}
-                                            {{ $l := .display | lower }}
-                                            {{ if eq $id $l }}
-                                            <option id="{{ .id }}" {{ if eq $d $l }}selected{{ end }} value="{{ .value }}" data-zip="zip">{{ .display }}</option>
+                {{ range first 1 .Params.quote }}
+                    {{ if eq .template "safeco-quote-form" }}
+                    {{ $d := .default }}
+                    <div class="w-embed w-script">
+                            <form name="gaqList" id="gaqList" onsubmit="return submitForm();">
+                                <div class="quote-form-wrap" onload="setProduct();">
+                                    <input id="zip" required="" type="text" name="zip" maxlength="5" placeholder="Enter Zip Code" class="zip-field w-input">
+                                    <select id="subMenu" required="" name="subMenu" class="insurance-select w-select">
+                                        {{ if $d }}{{ else }}<option id="defaultoption" value="">Select Insurance Type</option>{{ end }}
+                                        {{- range .options -}}
+                                            {{ $id := . | lower }}
+                                            {{ range $.Site.Data.quote_forms.safeco }}
+                                                {{ $l := .display | lower }}
+                                                {{ if eq $id $l }}
+                                                <option id="{{ .id }}" {{ if eq $d $l }}selected{{ end }} value="{{ .value }}" data-zip="zip">{{ .display }}</option>
+                                                {{ end }}
                                             {{ end }}
                                         {{ end }}
+                                    </select>
+                                    <input type="submit" value="Get a Quote" id="fakeBtn" class="get-a-quote w-button">
+                                    <input type="submit" value="Get a Quote" id="startBtn" onclick="submitForm();" class="get-a-quote w-button" style="display:none">
+                                </div>
+                            </form>
+                    </div>
+                    <div class="quote-box-disclaimer">Insurance quoting provided by SafeCo</div>
+                    {{ end }}
+                    {{ if eq .template "unitedhealthcare-quote-form" }}
+                    <form name="unitedhform" id="unitedhform" onsubmit="getquote()">
+                        <div class="quote-form-wrap">
+                            <input id="uhZip" required="" type="text" name="zip" maxlength="5" placeholder="Enter Zip Code" class="zip-field w-input">
+                            <select id="uhProduct" required="" name="Product" class="insurance-select w-select">
+                                {{ if .default }}{{ else }}<option value="">Select insurance type</option>{{ end }}
+                                {{ $def := .default | lower }}
+                                {{ range .options }}
+                                    {{ $id := . | lower }}
+                                    {{ range $.Site.Data.quote_forms.unitedhealthcare }}
+                                        {{ $l := .display | lower }}
+                                        {{ if eq $id $l }}<option {{ if eq $def $l -}}selected{{- end }} value="{{ .value }}">{{ .display }}</option>{{ end }}
                                     {{ end }}
-                                </select>
-                                <input type="submit" value="Get a Quote" id="fakeBtn" class="get-a-quote w-button">
-                                <input type="submit" value="Get a Quote" id="startBtn" onclick="submitForm();" class="get-a-quote w-button" style="display:none">
-                            </div>
-                        </form>
-                </div>
-                <div class="quote-box-disclaimer">Insurance quoting provided by SafeCo</div>
+                                {{ end }}
+                            </select>
+                            <input type="submit" id="uhFakeBtn" value="Get a Quote" class="get-a-quote w-button">
+                            <!--<a href="#" target="_blank" id="uhQuoteBtn" class="get-a-quote w-button" style="display:none">Get A Quote</a>-->
+                            <input type=submit id="uhQuoteBtn" class="get-a-quote w-button" onclick="submit" value="Get a Quote" style="display:none"/>
+                        </div>
+                    </form>
+                    {{ end }}
+                    {{ if eq .template "custom-link" }}
+                        <a class="get-a-quote" target="_blank" href="{{ .button_link }}">{{ .button_text }}</a>
+                    {{ end }}
+                    {{ if eq .template "call-for-a-quote" }}
+                        <a class="link-block-3 w-inline-block" href="tel:{{- if .phone_number -}}{{- .phone_number -}}{{- else -}}{{- $phone -}}{{- end -}}">
+                            <div class="call-us-large">{{ .heading }}<br/>{{- if .phone_number -}}{{- .phone_number -}}{{- else -}}{{ $phone }}{{ end }}</div>
+                        </a>
+                    {{ end }}
                 {{ end }}
-            {{ end }}
             {{ end }}
         </div>
     </div>
@@ -163,5 +193,7 @@
 {{ end }}
 
 {{ define "addscripts" }}
+    <!--uhc = UnitedHealthCare -->
     {{ partial "forms/safeco-scripts.html" . }}
+    {{ partial "forms/uhc-scripts.html" . }}
 {{ end }}
