improve video lightbox

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -24,7 +24,7 @@
                               "type": "video",
                               "originalUrl": "https://www.youtube.com/watch?v={{ $v2 }}",
                               "url": "https://www.youtube.com/watch?v={{ $v2 }}",
-                              "html": "<iframe class=\"embedly-embed\" src=\"//cdn.embedly.com/widgets/media.html?src=https%3A%2F%2Fwww.youtube.com%2Fembed%2F{{ $v2 }}%3Ffeature%3Doembed&url=http%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D{{ $v2 }}&image=https%3A%2F%2Fi.ytimg.com%2Fvi%2F{{ $v2 }}%2Fhqdefault.jpg&key=c4e54deccf4d4ec997a64902e9a30300&type=text%2Fhtml&schema=youtube\" width=\"940\" height=\"528\" scrolling=\"no\" frameborder=\"0\" allowfullscreen></iframe>",
+                              "html": "<iframe src=\"https://www.youtube.com/embed/{{ $v2 }}?autoplay=1&rel=0&showinfo=0&modestbranding=1\" width=\"720\" height=\"420\" scrolling=\"no\" frameborder=\"0\" allowfullscreen></iframe>",
                               "thumbnailUrl": "https://i.ytimg.com/vi/{{ $v2 }}/hqdefault.jpg",
                               "width": 940,
                               "height": 528
