--- a/layouts/posts/single.html
+++ b/layouts/posts/single.html
@@ -26,7 +26,7 @@
         <div>Michael Sosso</div>
         <img src="{{ .Site.Params.cloudinary_url }}w_750,q_80{{ .Params.Featured_image }}" />
         <div class="w-richtext">
-          {{ .Content }}
+          {{ replace .Content "https://res.cloudinary.com/modii/" "https://res.cloudinary.com/modii/w_750,q_50/" | safeHTML }}
         </div>
       </div>
       <div class="flex-grow">
