--- a/layouts/products/single.html
+++ b/layouts/products/single.html
@@ -155,7 +155,7 @@
                         <div class="product-details w-tab-content">
                             <div data-w-tab="Tab 4" class="w-tab-pane w--tab-active">
                                 <div class="w-richtext">
-                                    {{ .Content }}
+                                    {{ replace .Content "https://res.cloudinary.com/modii/" "https://res.cloudinary.com/modii/w_750,q_50/" | safeHTML }}
                                 </div>
                             </div>
                             <div data-w-tab="Tab 2" class="w-tab-pane">
